--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -344,3 +344,9 @@
         font-size: 1.5rem;
     }
 }
+
+.search-highlight {
+    background-color: #fff9c4;
+    padding: 0 2px;
+    border-radius: 2px;
+}
